Finished assignment, just never committed

--- a/Embeddings.ipynb
+++ b/Embeddings.ipynb
@@ -3,15 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Embeddings",
+      "name": "Embeddings.ipynb",
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "copyright",
-        "exercise-1-key-1",
-        "exercise-2-key-1",
-        "exercise-3-key-1",
-        "exercise-4-key-1"
+        "copyright"
       ],
       "toc_visible": true
     },
@@ -837,7 +833,7 @@
         "id": "jUWVyvqq6vj7"
       },
       "source": [
-        "*Your answer here:*\n",
+        "*In the clusters of the words we see little circles that are of positive and negative connotation.*\n",
         "\n"
       ]
     },
@@ -889,7 +885,43 @@
         "id": "D5ab4EOm8aYW"
       },
       "source": [
-        "# Your code goes here"
+        "\n",
+        "\n",
+        "embedding_dim = 50\n",
+        "embedding_layer = keras.layers.Embedding(vocab_size, embedding_dim)\n",
+        "\n",
+        "model = keras.Sequential([\n",
+        "  keras.layers.Embedding(vocab_size, embedding_dim, input_length=maxlen),\n",
+        "  keras.layers.Flatten(),\n",
+        "  keras.layers.Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "model.summary()\n",
+        "\n",
+        "model.compile(\n",
+        "  # Calculate loss for a binary classification problem.\n",
+        "  loss='binary_crossentropy',\n",
+        "\n",
+        "  # Adam is one of the most commonly used optimizers.\n",
+        "  optimizer=tf.keras.optimizers.Adam(),\n",
+        "\n",
+        "  # We will only track accuracy for this task.\n",
+        "  metrics=['accuracy']\n",
+        ")\n",
+        "history = model.fit(\n",
+        "    train_data,\n",
+        "    train_labels,\n",
+        "    epochs=10,\n",
+        "    batch_size=512,\n",
+        "    validation_split=0.2\n",
+        ")\n",
+        "\n",
+        "precision = tf.keras.metrics.Precision()\n",
+        "precision.update_state(test_labels, predictions)\n",
+        "recall = tf.keras.metrics.Recall()\n",
+        "recall.update_state(test_labels, predictions)\n",
+        "print('Precision: {}, Recall: {}'.format(\n",
+        "    precision.result().numpy(), recall.result().numpy()))"
       ],
       "execution_count": null,
       "outputs": []
@@ -1012,7 +1044,7 @@
         "id": "G0wJ755YROXi"
       },
       "source": [
-        "> *Your solution goes here*"
+        "> *The clusters seem much less circular in nature and take a more triangular prism shape. Seeing the data points in a 3 dimensional shape gives the appearance that the data points are much more closer than on the 2D graph.*"
       ]
     },
     {
@@ -1057,11 +1089,11 @@
         "id": "a2xFw2EOR-qo"
       },
       "source": [
-        "> 1. *Your answer here*\n",
-        "> 1. *Your answer here*\n",
-        "> 1. *Your answer here*\n",
-        "> 1. *Your answer here*\n",
-        "> 1. *Your answer here*"
+        "> 1. *film*\n",
+        "> 1. *her*\n",
+        "> 1. *him*\n",
+        "> 1. *comedy*\n",
+        "> 1. *movie*"
       ]
     }
   ]
